k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern-ingress
  namespace: three-tier
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
    - host: himanshubhatt.co.in
      http:
        paths:
          - path: /notesflow/api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
          - path: /notesflow/api/health
            pathType: Exact
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
          - path: /notesflow/api/ready
            pathType: Exact
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
          - path: /notesflow/api/startup
            pathType: Exact
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
          - path: /notesflow/
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
